# advanced-python-hw

hw1/: pyproject.toml  task_1.py  task_2.py  task_3.py
hw1/artifacts/: task_1_artifacts.txt  task_2_artifacts.txt  task_3_artifacts.txt  task_3_input_2.txt
hw2/artifacts/: example_full_table.tex  example_table.tex  pypi_link.txt
hw2/example_usage_lib/: Dockerfile  pyproject.toml
hw2/example_usage_lib/artifacts/: example_full.tex
hw2/example_usage_lib/src/example_usage_lib/: generate_latex.py
hw2/tests/: test_task_1.py
hw3/: pyproject.toml  task_1.py  task_2.py  task_3.py
hw3/artifacts_task_3/: A.txt  AB.txt  D.txt  hash.txt
