[project]
name = "example-usage-lib"
version = "0.1.0"
description = ""
authors = [
    {name = "FirePancake1177",email = "poiskov2016@gmail.com"}
]
requires-python = ">=3.13,<4.0"
packages = [{include = "example_usage_lib", from = "src"}]

[tool.poetry.dependencies]
hw-2-firepancake = "^0.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
